src/components/product/Carousel.css
.carousel-wrapper {
  position: relative;
  display: flex;
  height: 300px;
  flex-direction: column;
}

.carousel-content-wrapper {
  overflow: hidden;
  display: flex;
}

.carousel-content {
  scroll-snap-align: start;
  transition: transform 250ms linear;
}

.up-arrow,
.down-arrow {
  position: absolute;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 100%;
  height: 48px;
  border: 0;
  background-color: #fff;
  cursor: pointer;
}

.up-arrow {
  margin-bottom: -48px; /* Move the up arrow just above the image container */
  top: 0;
  transform: translateY(-100%); /* Adjust to make sure it's just above */
}

.down-arrow {
  margin-top: -48px; /* Move the down arrow just below the image container */
  bottom: 0;
  transform: translateY(100%); /* Adjust to make sure it's just below */
}


@media (max-width: 600px) {
  .carousel-wrapper {
    display: none;
  }

  /* .up-arrow, .down-arrow {
    display: none;
  } */
}

